--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "bullmq": "^5.12.13",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.0",
     "pg": "^8.12.0",
